--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,14 @@
     "version": "1.0.0",
     "description": "ACB Calculator Backend API",
     "main": "dist/index.js",
+    "type": "module",
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
         "test": "jest --coverage",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "debug": "tsx --inspect src/index.ts"
     },
     "dependencies": {
         "cors": "^2.8.5",
