--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "npm run dev --workspace=backend",
     "dev:frontend": "npm run dev --workspace=frontend",
+    "debug": "concurrently \"npm run debug --workspace=backend\" \"npm run dev --workspace=frontend\"",
     "build": "npm run build --workspace=backend && npm run build --workspace=frontend",
     "test": "npm test --workspace=backend",
     "lint": "eslint . --ext .ts,.tsx"
